# cricket-top-trumps

./: .gitignore  README.md  gameplay-flowchart.md  gameplay.md  prd.md  start.sh  vision.md
backend/: .env  ek_tappa_out.db  pyproject.toml  requirements.txt
backend/app/: __init__.py  crud.py  data_loader.py  database.py  main.py  models.py  schemas.py
backend/tests/: conftest.py  test_api.py  test_api_endpoints.py
espn_scrapper/: ipl_scrapper.py  requirements.txt
espn_scrapper/player_data/: all_players.json  player_1175361.json  player_1204538.json  player_164841.json  player_230559.json  player_236779.json  player_275487.json  player_276298.json  player_277916.json  player_28235.json  player_290716.json  player_311158.json  player_321777.json  player_326016.json  player_326434.json  player_331133.json  player_33141.json  player_34102.json  player_348144.json  player_378488.json  player_379143.json  player_390748.json  player_398439.json  player_422108.json  player_430246.json  player_431892.json  player_446763.json  player_447261.json  player_447587.json  player_44828.json  player_472145.json  player_475281.json  player_481896.json  player_481979.json  player_506612.json  player_533586.json  player_554691.json  player_559235.json  player_604304.json  player_625371.json  (+10 more)
frontend/: package-lock.json  package.json  playwright.config.js
frontend/playwright-report/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Card.js  Game.js  Header.js  Home.js  Leaderboard.js  Stats.js
frontend/tests/: home.spec.js
(+2 files in other folders)
